Adding GetTags endpoint
